# PriceHawk

./: .env example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: pyproject.toml
backend/apps/tracking/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tracking/migrations/: 0001_initial.py
backend/apps/users/: models.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
config/: settings.py
