[tool.poetry]
name = "pricehawk"
version = "0.1.0"
description = "monitoring price"
authors = ["Givinity"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
psycopg = "^3.2"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
